kubernetes/apps/base/openwebui/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-except-namespace
  namespace: openwebui
spec:
  description: "Allow traffic only to the namespace itself"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": openwebui
  ingress:
    - fromEndpoints:
        - matchLabels: {}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-cluster
  namespace: openwebui
spec:
  description: "Allow CloudNativePG pods access"
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: openwebui-cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: openwebui
            app.kubernetes.io/instance: openwebui
            app.kubernetes.io/name: openwebui
      toPorts:
        - ports:
            - port: postgresql
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-egress
  namespace: openwebui
spec:
  description: "Allow egress to centralized Dragonfly (dragonfly namespace)"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openwebui
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openwebui-server
  namespace: openwebui
spec:
  description: "Allow traffic from and to openwebui server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openwebui
      app.kubernetes.io/instance: openwebui
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: http
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": pangolin
            app.kubernetes.io/name: pangolin
            app.kubernetes.io/component: newt
      toPorts:
        - ports:
            - port: http
              protocol: TCP
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy
            app.kubernetes.io/name: envoy
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
            - port: "10080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: searxng
            app.kubernetes.io/instance: searxng
            app.kubernetes.io/name: searxng
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: n8n
            app.kubernetes.io/instance: n8n
            app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: litellm
            app.kubernetes.io/name: litellm
      toPorts:
        - ports:
            - port: "4000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tika
            app.kubernetes.io/name: tika
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app: rook-ceph-rgw
      toPorts:
        - ports:
            - port: "8080"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openwebui-ollama
  namespace: openwebui
spec:
  description: "Allow traffic from ollama server"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ollama
      app.kubernetes.io/instance: ollama
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openwebui-sync
  namespace: openwebui
spec:
  description: "Allow traffic from/to openwebui sync"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openwebui-sync
  egress:
    - toFQDNs:
        - matchName: truenas.${INTERNAL_DOMAIN}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rook-ceph
            app: rook-ceph-rgw
      toPorts:
        - ports:
            - port: "8080"
